--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,6 +5,7 @@
         Title="Фотогрыз" Height="600" Width="700">
     <Window.CommandBindings>
         <CommandBinding Command="local:MainWindow.Run" CanExecute="Run_CanExecute" Executed="Run_Executed" />
+        <CommandBinding Command="local:MainWindow.Clear" CanExecute="Clear_CanExecute" Executed="Clear_Executed" />
     </Window.CommandBindings>
     <Window.Resources>
         <Style x:Key="Header" TargetType="TextBlock">
@@ -45,6 +46,7 @@
             </ItemsControl>
             <WrapPanel>
                 <Button Width="70" Name="btnAdd" Click="btnAdd_Click">Add</Button>
+                <Button Width="70" Name="btnClear" Command="local:MainWindow.Clear" Margin="20,0,0,0">Clear</Button>
             </WrapPanel>
             <TextBlock Text="Parameters" Style="{StaticResource Header}"/>
             <DockPanel Margin="20,0,0,10">
