--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:PhotoEnumerator"
-        Title="Фотогрыз" Height="600" Width="700">
+        Title="Фотогрыз" Height="600" Width="800">
     <Window.CommandBindings>
         <CommandBinding Command="local:MainWindow.Run" CanExecute="Run_CanExecute" Executed="Run_Executed" />
         <CommandBinding Command="local:MainWindow.Clear" CanExecute="Clear_CanExecute" Executed="Clear_Executed" />
@@ -20,7 +20,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="300"/>
+            <ColumnDefinition Width="400"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Text="Фотогрыз" FontSize="36" FontWeight="Bold" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" Padding="10"/>
@@ -46,34 +46,33 @@
             </ItemsControl>
             <WrapPanel>
                 <Button Width="70" Name="btnAdd" Click="btnAdd_Click">Add</Button>
-                <Button Width="70" Name="btnClear" Command="local:MainWindow.Clear" Margin="20,0,0,0">Clear</Button>
+                <Button Width="70" Name="btnClear" Command="local:MainWindow.Clear" Margin="10,0,0,0">Clear</Button>
             </WrapPanel>
             <TextBlock Text="Parameters" Style="{StaticResource Header}"/>
-            <DockPanel Margin="20,0,0,10">
-                <TextBlock Text="Mask" Width="100" DockPanel.Dock="Left"/>
+            <DockPanel Margin="0,0,0,10">
+                <TextBlock Text="Mask" Width="60" DockPanel.Dock="Left"/>
                 <TextBox Name="tbMask" Text="{Binding Mask}"/>
             </DockPanel>
+            <Grid Margin="0,0,0,10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="60"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="70"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Text="Directory"/>
+                <TextBox Grid.Column="1" Name="tbTargetDirectory" Text="{Binding TargetDir}"/>
+                <Button Grid.Column="2" Name="btnTargetDirectory" Margin="10,0,0,0" Content="Choose" Click="btnTargetDirectory_Click"/>
+            </Grid>
             <Button Content="Run" Command="local:MainWindow.Run" FontSize="24" FontWeight="Bold" Margin="0,10,0,10"/>
         </StackPanel>
         <Grid Grid.Row="1" Grid.Column="1" Margin="10,0,10,10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" Text="Destination" Style="{StaticResource Header}"/>
-            <Grid Grid.Row="1" Margin="0,0,0,10">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="70"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" Text="Directory"/>
-                <TextBox Grid.Column="1" Margin="10,0,10,0" Name="tbTargetDirectory" Text="{Binding TargetDir}"/>
-                <Button Grid.Column="2" Name="btnTargetDirectory" Content="Choose" Click="btnTargetDirectory_Click"/>
-            </Grid>
-            <ListView Name="lvTarget" Grid.Row="2" ItemsSource="{Binding Renames}">
+            <TextBlock Grid.Row="0" Text="Preview" Style="{StaticResource Header}"/>
+            <ListView Name="lvTarget" Grid.Row="1" ItemsSource="{Binding Renames}">
                 <ListView.Resources>
                     <Style TargetType="{x:Type GridViewColumnHeader}">
                         <Setter Property="HorizontalContentAlignment" Value="Left" />
@@ -93,7 +92,7 @@
                     </GridView>
                 </ListView.View>
             </ListView>
-            <StackPanel Grid.Row="3">
+            <StackPanel Grid.Row="2">
                 <TextBlock Text="Picture" Style="{StaticResource Header}"/>
                 <WrapPanel Margin="0,0,0,10">
                     <TextBlock Text="Time: "/>
