--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -67,6 +67,7 @@
                 <Button Grid.Column="2" Name="btnTargetDirectory" Margin="10,0,0,0" Content="Choose" Click="btnTargetDirectory_Click"/>
             </Grid>
             <Button Content="Run" Command="local:MainWindow.Run" FontSize="24" FontWeight="Bold" Margin="0,10,0,10"/>
+            <ProgressBar Name="pbProgress" Height="20" Value="{Binding Progress}" Minimum="0" Maximum="{Binding RenamesCount}"/>
         </StackPanel>
         <Grid Grid.Row="1" Grid.Column="1" Margin="10,0,10,10">
             <Grid.RowDefinitions>
