--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,6 +6,7 @@
         Closing="MainWindow_Closing" Icon="PE_MAINICON.ico">
     <Window.CommandBindings>
         <CommandBinding Command="local:MainWindow.Run" CanExecute="Run_CanExecute" Executed="Run_Executed" />
+        <CommandBinding Command="local:MainWindow.Cancel" CanExecute="Cancel_CanExecute" Executed="Cancel_Executed" />
         <CommandBinding Command="local:MainWindow.Clear" CanExecute="Clear_CanExecute" Executed="Clear_Executed" />
     </Window.CommandBindings>
     <Window.Resources>
@@ -67,7 +68,10 @@
                 <Button Grid.Column="2" Name="btnTargetDirectory" Margin="10,0,0,0" Content="Choose" Click="btnTargetDirectory_Click"/>
             </Grid>
             <Button Content="Run" Command="local:MainWindow.Run" FontSize="24" FontWeight="Bold" Margin="0,10,0,10"/>
-            <ProgressBar Name="pbProgress" Height="20" Value="{Binding Progress}" Minimum="0" Maximum="{Binding RenamesCount}"/>
+            <DockPanel>
+                <Button Content="Cancel" Height="25" Width="50" Margin="10,0,0,0" Command="local:MainWindow.Cancel" DockPanel.Dock="Right"/>
+                <ProgressBar Name="pbProgress" Height="25" Value="{Binding Progress}" Minimum="0" Maximum="{Binding RenamesCount}"/>
+            </DockPanel>
         </StackPanel>
         <Grid Grid.Row="1" Grid.Column="1" Margin="10,0,10,10">
             <Grid.RowDefinitions>
