--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -27,7 +27,7 @@
         </Grid.ColumnDefinitions>
         <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Text="Фотогрыз" FontSize="36" FontWeight="Bold" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" Padding="10"/>
         <StackPanel Margin="10,0,10,10" Grid.Row="1" Grid.Column="0">
-            <StackPanel  Drop="icSources_Drop" AllowDrop="True" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}">
+            <StackPanel Drop="icSources_Drop" AllowDrop="True" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" IsEnabled="{Binding NotInProgress}">
                 <TextBlock Text="Sources" Style="{StaticResource Header}"/>
                 <ItemsControl Name="icSources" ItemsSource="{Binding Sources}">
                     <ItemsControl.ItemTemplate>
@@ -52,28 +52,30 @@
                     <Button Width="70" Name="btnClear" Command="local:MainWindow.Clear" Margin="10,0,0,0">Clear</Button>
                 </WrapPanel>
             </StackPanel>
-            <TextBlock Text="Parameters" Style="{StaticResource Header}"/>
-            <DockPanel Margin="0,0,0,10">
-                <TextBlock Text="Mask" Width="60" DockPanel.Dock="Left"/>
-                <TextBox Name="tbMask" Text="{Binding Mask, UpdateSourceTrigger=PropertyChanged}"/>
-            </DockPanel>
-            <Grid Margin="0,0,0,10">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="60"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="70"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" Text="Directory"/>
-                <TextBox Grid.Column="1" Name="tbTargetDirectory" Text="{Binding TargetDir, UpdateSourceTrigger=PropertyChanged}"/>
-                <Button Grid.Column="2" Name="btnTargetDirectory" Margin="10,0,0,0" Content="Choose" Click="btnTargetDirectory_Click"/>
-            </Grid>
+            <StackPanel IsEnabled="{Binding NotInProgress}">
+                <TextBlock Text="Parameters" Style="{StaticResource Header}"/>
+                <DockPanel Margin="0,0,0,10">
+                    <TextBlock Text="Mask" Width="60" DockPanel.Dock="Left"/>
+                    <TextBox Name="tbMask" Text="{Binding Mask, UpdateSourceTrigger=PropertyChanged}"/>
+                </DockPanel>
+                <Grid Margin="0,0,0,10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="60"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="70"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Text="Directory"/>
+                    <TextBox Grid.Column="1" Name="tbTargetDirectory" Text="{Binding TargetDir, UpdateSourceTrigger=PropertyChanged}"/>
+                    <Button Grid.Column="2" Name="btnTargetDirectory" Margin="10,0,0,0" Content="Choose" Click="btnTargetDirectory_Click"/>
+                </Grid>
+            </StackPanel>
             <Button Content="Run" Command="local:MainWindow.Run" FontSize="24" FontWeight="Bold" Margin="0,10,0,10"/>
             <DockPanel>
                 <Button Content="Cancel" Height="25" Width="50" Margin="10,0,0,0" Command="local:MainWindow.Cancel" DockPanel.Dock="Right"/>
                 <ProgressBar Name="pbProgress" Height="25" Value="{Binding Progress}" Minimum="0" Maximum="{Binding RenamesCount}"/>
             </DockPanel>
         </StackPanel>
-        <Grid Grid.Row="1" Grid.Column="1" Margin="10,0,10,10">
+        <Grid Grid.Row="1" Grid.Column="1" Margin="10,0,10,10" IsEnabled="{Binding NotInProgress}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
